修改了文件名称

--- a/机器学习金融风控/02-决策树规则挖掘/决策树规则挖掘.ipynb
+++ b/机器学习金融风控/02-决策树规则挖掘/决策树规则挖掘.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,166 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>uid</th>\n",
-       "      <th>oil_actv_dt</th>\n",
-       "      <th>create_dt</th>\n",
-       "      <th>total_oil_cnt</th>\n",
-       "      <th>pay_amount_total</th>\n",
-       "      <th>class_new</th>\n",
-       "      <th>bad_ind</th>\n",
-       "      <th>oil_amount</th>\n",
-       "      <th>discount_amount</th>\n",
-       "      <th>sale_amount</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>pay_amount</th>\n",
-       "      <th>coupon_amount</th>\n",
-       "      <th>payment_coupon_amount</th>\n",
-       "      <th>channel_code</th>\n",
-       "      <th>oil_code</th>\n",
-       "      <th>scene</th>\n",
-       "      <th>source_app</th>\n",
-       "      <th>call_source</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A8217710</td>\n",
-       "      <td>2018-08-19</td>\n",
-       "      <td>2018-08-17</td>\n",
-       "      <td>275.0</td>\n",
-       "      <td>48295495.4</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3308.56</td>\n",
-       "      <td>1760081.0</td>\n",
-       "      <td>1796001.0</td>\n",
-       "      <td>1731081.0</td>\n",
-       "      <td>8655401.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A8217710</td>\n",
-       "      <td>2018-08-19</td>\n",
-       "      <td>2018-08-16</td>\n",
-       "      <td>275.0</td>\n",
-       "      <td>48295495.4</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4674.68</td>\n",
-       "      <td>2487045.0</td>\n",
-       "      <td>2537801.0</td>\n",
-       "      <td>2437845.0</td>\n",
-       "      <td>12189221.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A8217710</td>\n",
-       "      <td>2018-08-19</td>\n",
-       "      <td>2018-08-15</td>\n",
-       "      <td>275.0</td>\n",
-       "      <td>48295495.4</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1873.06</td>\n",
-       "      <td>977845.0</td>\n",
-       "      <td>997801.0</td>\n",
-       "      <td>961845.0</td>\n",
-       "      <td>4809221.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A8217710</td>\n",
-       "      <td>2018-08-19</td>\n",
-       "      <td>2018-08-14</td>\n",
-       "      <td>275.0</td>\n",
-       "      <td>48295495.4</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4837.78</td>\n",
-       "      <td>2526441.0</td>\n",
-       "      <td>2578001.0</td>\n",
-       "      <td>2484441.0</td>\n",
-       "      <td>12422201.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A8217710</td>\n",
-       "      <td>2018-08-19</td>\n",
-       "      <td>2018-08-13</td>\n",
-       "      <td>275.0</td>\n",
-       "      <td>48295495.4</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2586.38</td>\n",
-       "      <td>1350441.0</td>\n",
-       "      <td>1378001.0</td>\n",
-       "      <td>1328441.0</td>\n",
-       "      <td>6642201.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "        uid oil_actv_dt  create_dt  total_oil_cnt  pay_amount_total class_new  \\\n",
        "0  A8217710  2018-08-19 2018-08-17          275.0        48295495.4         B   \n",
@@ -202,15 +48,15 @@
        "2           0            3  \n",
        "3           0            3  \n",
        "4           0            3  "
-      ]
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>uid</th>\n      <th>oil_actv_dt</th>\n      <th>create_dt</th>\n      <th>total_oil_cnt</th>\n      <th>pay_amount_total</th>\n      <th>class_new</th>\n      <th>bad_ind</th>\n      <th>oil_amount</th>\n      <th>discount_amount</th>\n      <th>sale_amount</th>\n      <th>amount</th>\n      <th>pay_amount</th>\n      <th>coupon_amount</th>\n      <th>payment_coupon_amount</th>\n      <th>channel_code</th>\n      <th>oil_code</th>\n      <th>scene</th>\n      <th>source_app</th>\n      <th>call_source</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A8217710</td>\n      <td>2018-08-19</td>\n      <td>2018-08-17</td>\n      <td>275.0</td>\n      <td>48295495.4</td>\n      <td>B</td>\n      <td>0</td>\n      <td>3308.56</td>\n      <td>1760081.0</td>\n      <td>1796001.0</td>\n      <td>1731081.0</td>\n      <td>8655401.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A8217710</td>\n      <td>2018-08-19</td>\n      <td>2018-08-16</td>\n      <td>275.0</td>\n      <td>48295495.4</td>\n      <td>B</td>\n      <td>0</td>\n      <td>4674.68</td>\n      <td>2487045.0</td>\n      <td>2537801.0</td>\n      <td>2437845.0</td>\n      <td>12189221.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>A8217710</td>\n      <td>2018-08-19</td>\n      <td>2018-08-15</td>\n      <td>275.0</td>\n      <td>48295495.4</td>\n      <td>B</td>\n      <td>0</td>\n      <td>1873.06</td>\n      <td>977845.0</td>\n      <td>997801.0</td>\n      <td>961845.0</td>\n      <td>4809221.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>A8217710</td>\n      <td>2018-08-19</td>\n      <td>2018-08-14</td>\n      <td>275.0</td>\n      <td>48295495.4</td>\n      <td>B</td>\n      <td>0</td>\n      <td>4837.78</td>\n      <td>2526441.0</td>\n      <td>2578001.0</td>\n      <td>2484441.0</td>\n      <td>12422201.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>A8217710</td>\n      <td>2018-08-19</td>\n      <td>2018-08-13</td>\n      <td>275.0</td>\n      <td>48295495.4</td>\n      <td>B</td>\n      <td>0</td>\n      <td>2586.38</td>\n      <td>1350441.0</td>\n      <td>1378001.0</td>\n      <td>1328441.0</td>\n      <td>6642201.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "source": [
-    "data = pd.read_excel(r\"C:\\Users\\浩\\Desktop\\BJYD\\Jupyter\\work\\模型\\2019年机器学习金融风控\\02\\oil_data_for_tree.xlsx\")\n",
+    "data = pd.read_excel(\"oil_data_for_tree.xlsx\")\n",
     "data.head()"
    ]
   },
@@ -2124,9 +1970,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python376jvsc74a57bd0b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
